Upgrade museum-html to fix error where close buttons did not appear on mobile. Also adjusting for mobile size

--- a/src/museum/museum.module.scss
+++ b/src/museum/museum.module.scss
@@ -21,6 +21,7 @@
 
 @media (max-width: 800px) {
   .museumContainer {
+    font-size: 12px;
     height: 300px;
   }
 
